centered image and header

--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" type="text/css" href="style.css">
 	<title></title>
 </head>
 <body>
-	<img src="monkey.png">
-	<h1>Coming Soon... Omicron V2</h1>
+	<div id="container">
+		<img id="logo" src="monkey.png">
+		<h1>Coming Soon... Omicron V2</h1>
+	</div>
 </body>
 </html>
